Fixed image spacing so it aligns with year scrolling section spacing.

--- a/src/components/ImageCarousel/ImageCarousel.scss
+++ b/src/components/ImageCarousel/ImageCarousel.scss
@@ -2,7 +2,6 @@
 
 .image-carousel {
     background-color: $Black;
-    padding: 3rem 0rem;
 
     .partial-screen-cover {
         width: 85%;
@@ -16,11 +15,9 @@
         text-align: right;
         font-size: 5rem;
         font-family: $font-heading;
-        margin: 0rem 3rem;
     }
 
     .image-and-arrows {
-        margin: 0rem 3rem;
         padding: 0rem;
         max-width: 100%;
 
@@ -45,7 +42,6 @@
             opacity: 85%;
         }
 
-
         .arrow-button-left {
             left: 0;
         }
@@ -63,7 +59,6 @@
         width: 45%;
         height: auto;
         padding: 0.5rem;
-        margin: 0rem 3rem;
         opacity: 50%;
         overflow: scroll;
     }
@@ -77,6 +72,7 @@
     @media screen and (max-width: 768px) {
         .partial-screen-cover {
             width: 100% !important;
+            padding: 0rem 3rem;
         }
 
         .large-right-text {
@@ -92,7 +88,7 @@
             overflow: visible !important;
             bottom: 0rem !important;
             opacity: 100% !important;
-            padding: 0rem 3rem !important;
+            padding: 0rem !important;
             margin: 1rem 0rem !important;
 
             p {
